--- a/resume.tex
+++ b/resume.tex
@@ -163,9 +163,10 @@
     \resumeSubheading
       {Senior DevOps/Platform Engineer}{Oct. 2020 – Present}
       {Agile Six Applications, Inc}{San Diego, CA (Remote)}
+      \resumeSubheadingNote{(on contract to the U.S. Department of Veterans Affairs)}
       \resumeItemListStart
-        \resumeItem{Migrated the Check-In Experience product to a new AWS account (see below)}
-        \resumeItem{Served as Tech Lead for the VA.gov Content Management System product (see below)}
+        \resumeItem{Migrated the VA.gov Check-In Experience product to a new AWS account}
+        \resumeItem{Served as Tech Lead for the VA.gov Content Management System product}
         \resumeItem{Served on a task force to improve hiring practices for DevOps engineers}
         \resumeItem{Hired multiple Senior Engineers and a Software Quality Architect}
         \resumeItem{Contributed to contract proposals and case studies}
@@ -177,8 +178,8 @@
       {Senior Software/DevOps Engineer}{Jan. 2016 – Oct. 2020}
       {Convention News Company}{Midland Park, NJ (Remote)}
       \resumeItemListStart
-        \resumeItem{Architected infrastructure and built the content and account management services for FutureFlight.aero (see below)}
-        \resumeItem{Constructed backend services for Business Jet Traveler (see below) and Aviation International News}
+        \resumeItem{Architected infrastructure and built the content and account management services for FutureFlight.aero}
+        \resumeItem{Constructed backend services for Business Jet Traveler and Aviation International News}
         \resumeItem{Migrated all products from Acquia hosting to AWS, reducing yearly IT operating costs by ~70\%}
         \resumeItem{Developed an app to centralize ad sales, subscriptions, and circulation data}
         \resumeItem{Guided and mentored junior engineers, emphasizing soft skills and engineering best practices}
