--- a/resume.tex
+++ b/resume.tex
@@ -131,11 +131,11 @@
 
 \begin{document}
 
-\newcommand{\MyEmail}{brisk.bell8311@tenesm.us}
-\newcommand{\MyTitle}{Senior DevOps/Platform/Site Reliability Engineer}
+\newcommand{\MyEmail}{clean.post9026@tenesm.us}
+\newcommand{\MyTitle}{Senior Psychonautic Engineer}
 \newcommand{\MyFirstName}{Nathan}
 \newcommand{\MyLastName}{Douglas}
-\newcommand{\MyFullName}{Nathan Douglas}
+\newcommand{\MyFullName}{Nathan ``Nug Doug'' Douglas}
 \newcommand{\MyPhoneNumber}{(330) 998-8049}
 \newcommand{\MyPhoneNumberPlain}{+13309988049}
 \newcommand{\MyWebsite}{darkdell.net}
@@ -152,8 +152,10 @@
 \end{center}
 
 \begin{center}
-  Senior DevOps Engineer with 10+ years’ experience leading cloud infrastructure migrations, developing applications, building CI/CD pipelines,
-  and mentoring cross-functional teams to deliver reliable, scalable solutions.
+I'm looking for a role that blends systems thinking, creative autonomy, and technical depth — 
+ideally at the intersection of machine learning, simulation, and infrastructure. I thrive in 
+environments that value elegance, exploration, and play, where weirdness is a feature, not a 
+bug. I want to expand the frontiers of science, benefit humanity, and blow minds.
 \end{center}
 
 %-----------EXPERIENCE-----------
@@ -165,37 +167,34 @@
       {Agile Six Applications, Inc}{San Diego, CA (Remote)}
       \resumeSubheadingNote{(on contract to the U.S. Department of Veterans Affairs)}
       \resumeItemListStart
-        \resumeItem{Migrated the VA.gov Check-In Experience product to a new AWS account}
+        \resumeItem{Migrated and modernized the VA.gov Check-In Experience products}
         \resumeItem{Served as Tech Lead for the VA.gov Content Management System product}
         \resumeItem{Served on a task force to improve hiring practices for DevOps engineers}
         \resumeItem{Hired multiple Senior Engineers and a Software Quality Architect}
         \resumeItem{Contributed to contract proposals and case studies}
         \resumeItem{Ensured and documented compliance with regulations across multiple products}
-        \resumeItem{Developed and maintained CI/CD pipelines using Jenkins and GitHub Actions}
       \resumeItemListEnd
 
     \resumeSubheading
       {Senior Software/DevOps Engineer}{Jan. 2016 – Oct. 2020}
       {Convention News Company}{Midland Park, NJ (Remote)}
       \resumeItemListStart
-        \resumeItem{Architected infrastructure and built the content and account management services for FutureFlight.aero}
-        \resumeItem{Constructed backend services for Business Jet Traveler and Aviation International News}
+        \resumeItem{Architected infrastructure and built content and account management and backend services for FutureFlight.aero}
+        \resumeItem{Designed and constructed API and backend services for Business Jet Traveler and Aviation International News}
         \resumeItem{Migrated all products from Acquia hosting to AWS, reducing yearly IT operating costs by ~70\%}
-        \resumeItem{Developed an app to centralize ad sales, subscriptions, and circulation data}
+        \resumeItem{Developed bespoke app to centralize ad sales, subscriptions, and circulation data}
         \resumeItem{Guided and mentored junior engineers, emphasizing soft skills and engineering best practices}
-        \resumeItem{Created and maintained Vagrant (and, later, DrupalVM) development environments}
-        \resumeItem{Developed and maintained CI/CD pipelines using CodeBuild/CodePipeline}
+        \resumeItem{Created and maintained Vagrant, Docker, and DrupalVM development environments}
+        \resumeItem{Developed and maintained CI/CD pipelines for all products}
       \resumeItemListEnd
 
     \resumeSubheading
       {Software Engineer}{Jan. 2012 – Dec. 2015}
       {DEVONtechnologies}{Bietigheim-Bissingen, Germany (Remote)}
       \resumeItemListStart
-        \resumeItem{Developed, launched, and maintained sync technologies for flagship apps}
-        \resumeItem{Collaborated effectively within teams dispersed across six countries and four continents}
-        \resumeItem{Led the adoption of Agile project management, Lean principles, and DevOps methodologies}
-        \resumeItem{Introduced CI/CD pipelines, sharply reducing failure rate and manual testing toil}
-        \resumeItem{Automated certificate and configuration management for release processes}
+        \resumeItem{Developed, launched, and maintained multi-leader sync technologies for flagship apps}
+        \resumeItem{Led the adoption of Agile project management and development practices}
+        \resumeItem{Introduced CI/CD pipelines and other DevOps best practices}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -258,13 +257,13 @@
 \section{Technical Skills}
   \resumeSubHeadingListStart
     \resumeListicleStart
-      \resumeListicleItem{Languages}{JavaScript, PHP, Bash, Rust, Python, C, Objective-C, Clojure } \\
-      \resumeListicleItem{Infrastructure-as-Code}{Terraform/OpenTofu/Terragrunt, Ansible, CloudFormation } \\
-      \resumeListicleItem{Containerization}{Kubernetes, Docker, LXC } \\
-      \resumeListicleItem{CI/CD}{GitHub Actions, Jenkins, AWS CodeBuild } \\
-      \resumeListicleItem{Logging/Monitoring}{Datadog, AWS CloudWatch, PagerDuty, Sentry } \\
-      \resumeListicleItem{Methodologies}{DevOps, Agile, GitOps, DevSecOps, Scrum, Kanban } \\
-      \resumeListicleItem{Miscellaneous}{JSON:API, GOFAI, \LaTeX{} } \\
+      \resumeListicleItem{Languages}{JavaScript, Bash, Rust, Python, C, PHP, Go, Objective-C, Clojure } \\
+      \resumeListicleItem{Infrastructure-as-Code}{Terraform, Ansible, CloudFormation } \\
+      \resumeListicleItem{Containerization/Orchestration}{Kubernetes, Docker/Docker-Compose, LXC, Nomad } \\
+      \resumeListicleItem{CI/CD}{GitHub Actions, Jenkins, CodeBuild/CodePipeline } \\
+      \resumeListicleItem{Logging/Monitoring}{Datadog, CloudWatch, PagerDuty, Sentry, OpenTelemetry } \\
+      \resumeListicleItem{Methodologies}{DevOps, GitOps, DevSecOps, MLOps, Agile, Scrum, Kanban } \\
+      \resumeListicleItem{Miscellaneous}{JSON:API, GOFAI, Slurm, Consul, Envoy, Vault, \LaTeX{} } \\
     \resumeListicleEnd
   \resumeSubHeadingListEnd
 
@@ -274,18 +273,24 @@
     \resumeSubheading
       {University of Nevada at Las Vegas}{Las Vegas, NV}
       {Bachelor of Arts in Computer Science}{May 2009 – Dec 2011}
+    \resumeSubheading
+      {University of Akron}{Akron, OH}
+      {Bachelor of Arts in English Literature (Incomplete)}{Sep 2006 – May 2008}
+    \resumeSubheading
+      {Bowling Green State University}{Bowling Green, OH}
+      {Bachelor of Fine Arts in Creative Writing \& Bachelor of Arts in Philosophy (Incomplete)}{Sep 2003 – Dec 2005}
   \resumeSubHeadingListEnd
 
 %-----------PERSONAL PROJECTS-----------
 \section{Personal Projects (Just for Fun)}
   \resumeSubHeadingListStart
     \resumeListicleStart
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/blackpool/}{💻 Blackpool}{An implementation of the Lox programming language and virtual machine}{Rust} \\
-      \resumeSideProjectListicleItem{https://github.com/goldentooth/}{🦷 Goldentooth}{Raspberry Pi Kubernetes cluster projects}{Ansible, Terraform, Bash} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/whispers/}{🗣️ Whispers}{A self-organizing, belief-driven mesh where nodes propose, verify, and evolve solutions through dynamic, decentralized consensus}{Rust} \\
+      \resumeSideProjectListicleItem{https://github.com/goldentooth/}{🦷 Goldentooth}{Raspberry Pi Kubernetes/Slurm/Nomad Cluster/Chaos Zoo, infrastructure red in tooth and claw}{Ansible, Terraform, Bash} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/blackpool/}{💻 Blackpool}{An implementation of Bob Nystrom's Lox programming language and virtual machine}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{A cycle-accurate NES emulator}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/sunhouse/}{🌈 Sunhouse}{A simple ray-tracing renderer}{Rust} \\
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/oldstones/}{🪨 Oldstones}{An implementation of Tim Boring's simple orchestrator}{Go} \\
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 CLORK}{A port of \emph{ZORK I} from the original microcomputer ZIL}{Clojure} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 CLORK}{A port (early stages) of \emph{ZORK I} from the original microcomputer ZIL}{Clojure} \\
     \resumeListicleEnd
   \resumeSubHeadingListEnd
 
