--- a/resume.tex
+++ b/resume.tex
@@ -280,7 +280,7 @@ bug. I want to expand the frontiers of science, benefit humanity, and blow minds
   \resumeSubHeadingListStart
     \resumeListicleStart
       \resumeSideProjectListicleItem{https://github.com/ndouglas/whispers/}{🗣️ Whispers}{A self-organizing, belief-driven mesh where nodes propose, verify, and evolve solutions through dynamic, decentralized consensus}{Rust} \\
-      \resumeSideProjectListicleItem{https://github.com/goldentooth/}{🦷 Goldentooth}{Raspberry Pi Kubernetes/Slurm/Nomad Cluster/Chaos Zoo, infrastructure red in tooth and claw}{Ansible, Terraform, Bash} \\
+      \resumeSideProjectListicleItem{https://github.com/goldentooth/}{🦷 Goldentooth}{Raspberry Pi Kubernetes/Slurm/Nomad Cluster, infrastructure red in tooth and claw}{Ansible, Terraform, Bash} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/blackpool/}{💻 Blackpool}{An implementation of Bob Nystrom's Lox programming language and virtual machine}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{A cycle-accurate NES emulator}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/sunhouse/}{🌈 Sunhouse}{A simple ray-tracing renderer}{Rust} \\
