--- a/resume.tex
+++ b/resume.tex
@@ -131,7 +131,7 @@
 
 \begin{document}
 
-\newcommand{\MyEmail}{clean.post9026@tenesm.us}
+\newcommand{\MyEmail}{firm.watch2319@tenesm.us}
 \newcommand{\MyTitle}{Senior Psychonautic Engineer}
 \newcommand{\MyFirstName}{Nathan}
 \newcommand{\MyLastName}{Douglas}
